[package]
name = "github-helper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gctl"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = '3.2.8'
reqwest = { version = "0.11", features = ["json", "native-tls", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
http = '0.2.8'
serde = { version = '1.0.138', features = ["derive"] }
serde_json = '1.0.82'
lazy_static = "1.4.0"

[dev-dependencies]
tokio-test = "0.4.2"